added properties for jms in spring property file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
+# JMS
+spring.activemq.broker-url=tcp://10.10.4.189:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
+
+# DATABASE
 spring.datasource.url=jdbc:mysql://localhost/jee_jpa_simple
 spring.datasource.username=trainee
 spring.datasource.password=trainee
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+# OWN VARS
 bank.prefix=S
+bank.queue.receive.name=bank_s
+bank.queue.send.name=bank_y
