--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,17 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+
+# dependencies
+node_modules
+
+# testing
+coverage
+
+# production
+build
+
+# misc
+.DS_Store
+.env
+npm-debug.log
